add about.html page

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 										</ul>
 									</div>
 								</div>
+
 								<div id="main" class="grid">
 						      <div id="intro" class="width-12-12-m width-12-12">
 						        <div id="intro-holder">
@@ -46,9 +47,9 @@
 						        </div>
 						      </div>
 						      <div id="work" class="width-12-12-m width-12-12">
-						        <h3>Course Work</h3>
+						        <h3>Course Work: TBD</h3>
 						        <div id="work-holder" class="grid">
-
+	<!--
 						          <div class="width-12-12-m width-4-12 work-item">
 						            <a class="inner" href="portfolio-single.html" title="Hell Yes">
 						              <img title="Every Single Person" src="images/yes.png" />
@@ -58,7 +59,7 @@
 						              </div>
 						            </a>
 						          </div>
-											
+
 						          <div class="width-12-12-m width-4-12 work-item">
 						            <a class="inner" href="portfolio-single.html" title="Hell Yes">
 						              <img title="Every Single Person" src="images/yes.png" />
@@ -77,7 +78,7 @@
 							</div>
 						</a>
 					</div>
-
+-->
 				<div>
 			</div>
 		</div>
