edits to about me and main file

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		</div>
 		<div id="footer" class="grid">
 			<div class="width-12-12-m width-12-12">
-				<p>Copyright ©2022 · Nathaly D Uruchima</p>
+				<h4>Copyright ©2022 · Nathaly D Uruchima</h4>
 			</div>
 	</div>
 </div>
