color and margin edit

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<meta charset="utf-8">
 		<meta name ="description" content="Arts 486 Web Journal">
 		<meta name = "author" content= "Nathaly Uruchima">
-		<emta name = "viewport" content = "width=device-width, inital-scale=1.0">
+		<meta name = "viewport" content = "width=device-width, inital-scale=1.0">
 		<!-- bookmark icon-->
 		<link rel = "icon" type "image/png" href="images/icon.png">
 		<!-- Google font-->
@@ -83,7 +83,7 @@
 		</div>
 		<div id="footer" class="grid">
 			<div class="width-12-12-m width-12-12">
-				<h4>Copyright ©2022 · Nathaly D Uruchima</h4>
+				<p>Copyright ©2022 · Nathaly D Uruchima</p>
 			</div>
 	</div>
 </div>
