--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 						        <div id="work-holder" class="grid">
 						          <div class="width-12-12-m width-4-12 work-item">
 						            <a class="inner" href="portfolio-single.html" title="">
-						              <img title="Project" src="images/tbd.jpg" />
+						            <h2><a href="proposal.html">  Project Proposal </h2></a>
 						              <div class="work-inside">
-						                <h2>Project Title</h2>
-						                <b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum posuere nisi.</b>
+						               <!--  <h2>Project Proposal</h2> -->
+						                <b>Project proposal for digital story about nail polish.</b>
 						              </div>
 						            </a>
 						          </div>
