added storyboard page and needed images

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 						          </div>
 
 						          <div class="width-12-12-m width-4-12 work-item">
-						            <a class="inner" href="portfolio-single.html" title="">
+						            <a class="inner" href="storyboard.html" title="">
 						              <img title="Project" src="images/tbd.jpg" />
 						              <div class="work-inside">
-						                <h2>Project Title</h2>
-						                <b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum posuere nisi.</b>
+						                <h2>Storyboard</h2>
+						                <b>Documented images of storyboard for nailpolish digital story.</b>
 						              </div>
 												</a>
 					</div>
