edit to index.html and add images

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 						          <div class="width-12-12-m width-4-12 work-item">
 						            <a class="inner" href="proposal.html" title="Project Proposal">
-						         			<img title="Proposal" src="images/tbd.jpg" />
+						         			<img title="Proposal" src="images/pp.png" />
 						             	<div class="work-inside">
 														 <h2>Project Proposal</h2>
 						                <b>Documented proposal for digital story about nail polish.</b>
@@ -63,7 +63,7 @@
 
 						          <div class="width-12-12-m width-4-12 work-item">
 						            <a class="inner" href="storyboard.html" title="">
-						              <img title="Project" src="images/tbd.jpg" />
+						              <img title="Project" src="images/storyboard.png" />
 						              <div class="work-inside">
 						                <h2>Storyboard</h2>
 						                <b>Documented images of storyboard for nail polish digital story.</b>
@@ -72,7 +72,7 @@
 					</div>
 					<div class="width-12-12-m width-4-12 work-item">
 						<a class="inner" href="draft.html" title="">
-						<img title="Project" src="images/tbd.jpg" />
+						<img title="Project" src="images/drafts.png" />
 							<div class="work-inside">
 								<h2>Draft</h2>
 								<b>Draft of some of the pages for the digital story about nail polish.</b>
